# gmsh4mrst

./: BUILD.md  LICENCE  README.md  pebiGrid2DGmsh.m  requirements.txt  setup.cfg
examples/: exampleClippedPebi2DGmsh.m  exampleClippedPebi2DGmsh_empty.m  exampleDelaunayGrid2DGmsh.m  examplePebiGrid2DGmsh.m  examplePebiGrid2DGmshBackground.m  examplePebiGrid2DGmshBase.m  reloadPython.m
matlab/: clippedPebi2DGmsh.m  delaunayGrid2DGmsh.m  pebiGrid2DGmsh.m  pebiGrid2DGmsh2.m  pebiGrid2DGmsh3.m  pebiGrid2DGmshBackground.m  pebiGrid2DGmshBackground2.m  pebiGrid2DGmshBase.m
python/: __init__.py  _arguments.py  _assertions.py  _geometry.py  _gmsh.py  background_grid_2D.py  delaunay_grid_2D.py  gmsh2mrst.py  pebi_base_2D.py
python/gmsh4mrst/: __init__.py  _arguments.py  _gmsh.py  background_grid_2D.py  delaunay_grid_2D.py  pebi_base_2D.py
