[metadata]
name = gmsh4mrst
version = 0.0.3
author = Andreas Bjelland Berg
author_email = berg.andreasb+PyPi@gmail.com
description = Gmsh backend integration for MRST
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BollaBerg/MA2002-Bachelor-project
project_urls =
    Bug Tracker = https://github.com/BollaBerg/MA2002-Bachelor-project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
     = python
packages = find:
python_requires = >=3.8
install_requires =
    gmsh >= 4.10

[options.packages.find]
where = python